  added new GetCPUCount() and SetConcurrency() functions (useful under Solaris
  only so far)
- wxDir class for enumerating files in a directory
- wxLog functions are now (more) MT-safe
- wxStopWatch class, timer functions have more chances to return correct
  results for your platform (use ANSI functions where available)
- wxString::ToLong, ToULong, ToDouble methods added
- buffer overflows in wxString and wxLog classes fixed (if snprintf() function
  is available)
- wxArray::RemoveAt() replaces deprectaed wxArray::Remove(index)

all (GUI):
- wxMenu(Bar)::Insert() and Remove() functions for dynamic menu menagament
- wxToolBar supports arbitrary controls (not only buttons) and can be
  dynamically changed (Delete/Insert functions)
- vertical toolbars supported by MSW and GTK native wxToolBar classes
- wxTreeCtrl and wxListCtrl allow setting colour/fonts for individual items
- "file open" dialog allows selecting multiple files at once (contributed by
  John Norris)
- wxMimeTypesManager uses GNOME/KDE MIME database to get the icons for the
  MIME types if available (Unix only)
- wxDC::DrawRotatedText() (based on contribution by Hans-Joachim Baader)

- TIFF support added (libtiff required and included in the distribution)
- PCX files can now be written (24 bit only so far)

wxMSW:

- wxTreeCtrl::IsVisible() bug fixed (thanks to Gary Chessun)
- tooltips work with wxRadioBox
- returning FALSE from OnPrintPage() aborts printing

wxGTK:

- wxFontMapper endless recursion bug (on some systems) fixed
- wxGTK synthesizes wxActivateEvents
- UpdateUI handlers may be used with wxTextCtrl

wxMotif:

- wxMenu::Enable) works

NOTE: for changes after wxWindows 2.1.0 b4, please see the CVS
change log.

Major improvements are listed in readme.txt.

2.1.0, b4, May 9th 1999
-----------------------

wxGTK:

- JPEG support added.
- Many fixes and changes not thought worth mentioning in this file :-)

wxMSW:

- wxNotebook changes: can add image only; wxNB_FIXEDWIDTH added;